# HW-WEB-8

./: pyproject.toml
first half/: add_data.py  db_models.py  main.py
second half/: Mongo_connect.py  db_models.py  email_consumer.py  producer.py  rabbit_conect.py  sms_consumer.py
