[tool.poetry]
name = "HW-web-8"
version = "0.1.0"
description = ""
authors = ["Vlad96Kir <130667144+Vlad96Kir@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.27.0"
redis = "^5.0.1"
pika = "^1.3.2"
faker = "^19.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"